bootstrap/argo-cd/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
  annotations:
    link.argocd.argoproj.io/external-link: https://argocd.cluster.sciops.net
spec:
  hosts:
    - "argocd.cluster.sciops.net"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri: 
            prefix: /
      route: 
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
